tests/suite/snapshots/suite__check__tests__check__bad_arg_shadowing.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad_arg_shadowing.xi:2:5]
   │
 1 │ foo() {}
   · ─┬─  
   ·  ╰─── Previous definition here
 2 │ bar(foo: int) {}
   ·     ─┬─  
   ·      ╰─── Name already bound in environment
───╯

